--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : DSI Visualization
+tagline: Brainhack 2013 Prisma Data Challange
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Brainhack2013
+  email : cameron.craddock@gmail.com
+  github : none
+  twitter : none
+  feedburner : none
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://brainhack2013.github.io/Prisma_data_challenge
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
